# Peacefall

./: .gitignore  README.md  config.json  pyproject.toml
agents/: 周听澜.json  夏晚棠.json  姜白榆.json  林知予.json  沈澈.json  法官.json  秦疏影.json  苏南枝.json  许砚.json  闻之遥.json  陆星野.json  陈醒.json  顾临川.json
docs/common/: background-knowledge.md
docs/judge-flows/: 6p-classic.md
docs/role-sets/: 6p-classic.md
examples/logs/20260620-133318/: README.md
examples/logs/20260620-133318/audio/20260620-133318-980856/: manifest.jsonl
examples/logs/20260620-133318/messages/: messages-20260620-133318-981132.jsonl
src/: README.md  runner.py
src/agents/: README.md  factory.py  profiles.py  selection.py
src/engine/: README.md  __init__.py  agent_io.py  assignments.py  live_logging.py  message_listeners.py  message_log.py  rules.py  state.py
src/memory/: README.md  __init__.py  reflection.py  store.py
src/model_providers/: README.md  __init__.py  aliyun_provider.py  codex_auth.py  codex_provider.py  config.py  deepseek_provider.py  factory.py  openai_provider.py
src/prompts/: README.md  builder.py  templates.py
src/role_set_engines/: README.md  __init__.py  six_player_classic.py
src/roles/: README.md  __init__.py  role_sets.py  types.py
src/tts/: README.md  __init__.py  aliyun_qwen.py  factory.py
