[project]
name = "pingan-ye"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.10",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.2.2",
    "openai>=2.21.0,<3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
